<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/dog"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_login"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_slogan"
                android:text="@string/app_slogan"
                android:textColor="@color/white"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="18dp"
                style="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/editText_credentials"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_credentials"
                android:inputType="textEmailAddress"
                android:drawableRight="@drawable/ic_email"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_email_or_username"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/editText_password"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_password"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:drawableRight="@drawable/ic_lock"
                android:textColor="@color/black"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:textColorHint="@color/black"
                android:background="@drawable/bg_edit_normal"
                app:layout_constraintBottom_toTopOf="@id/button_sign_in"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/button_sign_in"
                android:text="@string/text_sing_in"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="36dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_normal"
                app:layout_constraintBottom_toTopOf="@+id/textView_forgot_password"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_forgot_password"
                android:text="@string/text_forgot_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>