<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".HomeActivity">

        <EditText
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Pesquisar"
            android:drawableRight="@drawable/ic_search"
            android:background="@drawable/bg_edit_seach"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="65dp"
            android:layout_marginTop="10dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ImagePerson"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_person"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Novos Animais Aqui"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Rv_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/home_list_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    tools:context=".AboutFragment"
                    app:layout_constraintTop_toBottomOf="@id/Rv_home"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/about_title"
                        android:textColor="#1C8701"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/border"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/sobre_nos"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            tools:ignore="VisualLintLongText" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/mission_title"
                        android:textColor="#1C8701"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/border"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/mission_text"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            tools:ignore="VisualLintLongText" />
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/footer_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        android:background="#2E2E2E"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/footer_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Contato:(11) 95470-5679"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Endereço:Rua Onze de outobro - Barueri - SP"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pet Space copyright 2022"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="90dp"
                            android:text="Todos os direitos reservados somos a petspace desde 2022 no mercado"
                            android:textSize="10sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp"/>
                    </LinearLayout>

                </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>